jenkin-eks/jenkins-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: default
spec:
  type: ExternalName
  externalName: jenkins-service.jenkins.svc.cluster.local
  ports:
  - port: 80
