jenkin-eks/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80        
      targetPort: 8080 
    - name: jnlp
      protocol: TCP
      port: 50000   
      targetPort: 50000
